# forge

./: Cargo.toml  todo.md
src/: build.rs  commands.rs  forge.rs  main.rs  new.rs  ninja.rs
src/templates/: forge.gitignore  lib.c  main.c
