[package]
name = "forge"
version = "0.1.0"
authors = ["Jakob Bowyer <jkbbwr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
toml = "0.5.8"
serde = { version = "1.0.125", features = ["derive"] }
globwalk = "0.8.1"
structopt = "0.3.21"